--- a/css/app.css
+++ b/css/app.css
@@ -53,4 +53,8 @@ html {
     #paris {
     background-color: #d32f2f;
     }
+    .destination:hover h2 {
+    transform: rotate(0deg);
+    }
+
     
